Add header and subheader

--- a/index.html
+++ b/index.html
@@ -6,5 +6,21 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 	</head>
-	<body></body>
+	<body>
+		<div class="header">
+			<a href="">Header logo</a>
+			<ul style="list-style: none">
+				<li><a href="">Link 1</a></li>
+				<li><a href="">Link 2</a></li>
+				<li><a href="">Link 3</a></li>
+			</ul>
+		</div>
+
+		<div class="subheader">
+			<p>Header</p>
+			<p>Text</p>
+			<button>Button</button>
+			<a href=""><img src="" alt="Subheader image" /></a>
+		</div>
+	</body>
 </html>
