Add info, quote and call to action elements

--- a/index.html
+++ b/index.html
@@ -23,5 +23,36 @@
 			<button>Button</button>
 			<a href=""><img src="" alt="Subheader image" /></a>
 		</div>
+
+		<div class="info">
+			<p>Header</p>
+			<span class="infocard">
+				<a href="">1</a>
+				<p>desc</p>
+			</span>
+			<span class="infocard">
+				<a href="">1</a>
+				<p>desc</p>
+			</span>
+			<span class="infocard">
+				<a href="">1</a>
+				<p>desc</p>
+			</span>
+			<span class="infocard">
+				<a href="">1</a>
+				<p>desc</p>
+			</span>
+		</div>
+
+		<div class="quote">
+			<p>quote</p>
+			<p>-author</p>
+		</div>
+
+		<div class="call">
+			<p></p>
+			<p></p>
+			<button></button>
+		</div>
 	</body>
 </html>
