--- a/index.html
+++ b/index.html
@@ -50,9 +50,13 @@
 		</div>
 
 		<div class="call">
-			<p></p>
-			<p></p>
-			<button></button>
+			<p>header</p>
+			<p>text</p>
+			<button>button</button>
+		</div>
+
+		<div class="footer">
+			<p>footer</p>
 		</div>
 	</body>
 </html>
