--- a/index.html
+++ b/index.html
@@ -18,40 +18,46 @@
 		</div>
 
 		<div class="subheader">
-			<p>Header</p>
-			<p>Text</p>
-			<button>Button</button>
+			<span class="subheader-left">
+				<p>Header</p>
+				<p>Text</p>
+				<button>Button</button>
+			</span>
 			<a href=""><img src="" alt="Subheader image" /></a>
 		</div>
 
 		<div class="info">
 			<p>Header</p>
-			<span class="infocard">
-				<a href="">1</a>
-				<p>desc</p>
-			</span>
-			<span class="infocard">
-				<a href="">1</a>
-				<p>desc</p>
-			</span>
-			<span class="infocard">
-				<a href="">1</a>
-				<p>desc</p>
-			</span>
-			<span class="infocard">
-				<a href="">1</a>
-				<p>desc</p>
+			<span class="cards">
+				<span class="infocard">
+					<a href="">1</a>
+					<p>desc</p>
+				</span>
+				<span class="infocard">
+					<a href="">1</a>
+					<p>desc</p>
+				</span>
+				<span class="infocard">
+					<a href="">1</a>
+					<p>desc</p>
+				</span>
+				<span class="infocard">
+					<a href="">1</a>
+					<p>desc</p>
+				</span>
 			</span>
 		</div>
 
-		<div class="quote">
-			<p>quote</p>
-			<p>-author</p>
+		<div class="inspire">
+			<p class="quote">quote</p>
+			<p class="author">-author</p>
 		</div>
 
 		<div class="call">
-			<p>header</p>
-			<p>text</p>
+			<div class="call-content">
+				<p>header</p>
+				<p>text</p>
+			</div>
 			<button>button</button>
 		</div>
 
