--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 				<p>Text</p>
 				<button>Button</button>
 			</span>
-			<a href=""><img src="" alt="Subheader image" /></a>
+			<div class="placeholder">
+				<div class="myimage" style="background-image: url(./300.png)">
+					<img />
+				</div>
+			</div>
 		</div>
 
 		<div class="info">
