Add image wrapper with img

--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@
 
 		<div class="subheader">
 			<span class="subheader-left">
-				<p>Header</p>
-				<p>Text</p>
+				<p>Header hodor hodor hodor hodor hodor hodor hodor</p>
+				<p>
+					Text text text text text text text text text text text text text text
+					text text text text text text text text text text text
+				</p>
 				<button>Button</button>
 			</span>
-			<div class="placeholder">
-				<div class="myimage" style="background-image: url(./300.png)">
-					<img />
-				</div>
+			<div class="image-wrapper">
+				<img alt="An image" src="300.png" />
 			</div>
 		</div>
 
