Change placeholder to catholder

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 				</p>
 				<button>Button</button>
 			</span>
-			<div class="image-wrapper">
-				<img alt="An image" src="300.png" />
-			</div>
+			<span class="image-wrapper">
+				<img alt="An image" src="./img/200.jpg" />
+			</span>
 		</div>
 
 		<div class="info">
