--- a/index.html
+++ b/index.html
@@ -19,35 +19,47 @@
 
 		<div class="subheader">
 			<span class="subheader-left">
-				<p>Header hodor hodor hodor hodor hodor hodor hodor</p>
+				<p class="text-header">Header hodor hodor hodor hodor hodor hodor hodor</p>
 				<p>
 					Text text text text text text text text text text text text text text
 					text text text text text text text text text text text
 				</p>
 				<button>Button</button>
 			</span>
-			<span class="image-wrapper">
-				<img alt="An image" src="./img/200.jpg" />
+			<span class="sub-image-wrapper">
+				<img alt="An image" src="./img/500x200.jpg" />
 			</span>
 		</div>
 
 		<div class="info">
-			<p>Header</p>
+			<p class="text-header">Header</p>
 			<span class="cards">
 				<span class="infocard">
-					<a href="">1</a>
+					<a href="">
+						<span class="card-image-wrapper">
+				<img alt="An image" src="./img/100.jpg" />
+					</a>
 					<p>desc</p>
 				</span>
 				<span class="infocard">
-					<a href="">1</a>
+					<a href="">
+						<span class="card-image-wrapper">
+				<img alt="An image" src="./img/100.jpg" />
+					</a>
 					<p>desc</p>
 				</span>
 				<span class="infocard">
-					<a href="">1</a>
+					<a href="">
+						<span class="card-image-wrapper">
+				<img alt="An image" src="./img/100.jpg" />
+					</a>
 					<p>desc</p>
 				</span>
 				<span class="infocard">
-					<a href="">1</a>
+					<a href="">
+						<span class="card-image-wrapper">
+				<img alt="An image" src="./img/100.jpg" />
+					</a>
 					<p>desc</p>
 				</span>
 			</span>
