Change catholder to lorem picsum

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<button>Button</button>
 			</span>
 			<span class="sub-image-wrapper">
-				<img alt="An image" src="./img/500x200.jpg" />
+				<img alt="An image" src="https://picsum.photos/500/200" />
 			</span>
 		</div>
 
@@ -37,30 +37,30 @@
 				<span class="infocard">
 					<a href="">
 						<span class="card-image-wrapper">
-				<img alt="An image" src="./img/100.jpg" />
-					</a>
-					<p>desc</p>
+				<img alt="An image" src="https://picsum.photos/id/11/100" />
+					<p>desc</p>	
+				</a>
 				</span>
 				<span class="infocard">
 					<a href="">
 						<span class="card-image-wrapper">
-				<img alt="An image" src="./img/100.jpg" />
-					</a>
+				<img alt="An image" src="https://picsum.photos/id/21/100" />
 					<p>desc</p>
+</a>
 				</span>
 				<span class="infocard">
 					<a href="">
 						<span class="card-image-wrapper">
-				<img alt="An image" src="./img/100.jpg" />
-					</a>
+				<img alt="An image" src="https://picsum.photos/id/31/100" />
 					<p>desc</p>
+</a>
 				</span>
 				<span class="infocard">
 					<a href="">
 						<span class="card-image-wrapper">
-				<img alt="An image" src="./img/100.jpg" />
-					</a>
+				<img alt="An image" src="https://picsum.photos/id/41/100" />
 					<p>desc</p>
+</a>
 				</span>
 			</span>
 		</div>
