--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
 		<div class="subheader">
 			<span class="subheader-left">
-				<p class="text-header">Header hodor hodor hodor hodor hodor hodor hodor</p>
+				<p class="text-header">
+					Header hodor hodor hodor hodor hodor hodor hodor
+				</p>
 				<p>
 					Text text text text text text text text text text text text text text
 					text text text text text text text text text text text
@@ -32,35 +34,39 @@
 		</div>
 
 		<div class="info">
-			<p class="text-header">Header</p>
+			<p class="text-header" id="info-header">Header</p>
 			<span class="cards">
 				<span class="infocard">
 					<a href="">
 						<span class="card-image-wrapper">
-				<img alt="An image" src="https://picsum.photos/id/11/100" />
-					<p>desc</p>	
-				</a>
+							<img alt="An image" src="https://picsum.photos/id/11/100" />
+						</span>
+					</a>
+					<p>desc</p>
 				</span>
 				<span class="infocard">
 					<a href="">
 						<span class="card-image-wrapper">
-				<img alt="An image" src="https://picsum.photos/id/21/100" />
+							<img alt="An image" src="https://picsum.photos/id/21/100" />
+						</span>
+					</a>
 					<p>desc</p>
-</a>
 				</span>
 				<span class="infocard">
 					<a href="">
 						<span class="card-image-wrapper">
-				<img alt="An image" src="https://picsum.photos/id/31/100" />
+							<img alt="An image" src="https://picsum.photos/id/31/100" />
+						</span>
+					</a>
 					<p>desc</p>
-</a>
 				</span>
 				<span class="infocard">
 					<a href="">
 						<span class="card-image-wrapper">
-				<img alt="An image" src="https://picsum.photos/id/41/100" />
+							<img alt="An image" src="https://picsum.photos/id/41/100" />
+						</span>
+					</a>
 					<p>desc</p>
-</a>
 				</span>
 			</span>
 		</div>
