Change text content in call and subheader

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 
 		<div class="subheader">
 			<span class="subheader-left">
-				<p class="text-header">
-					Header hodor hodor hodor hodor hodor hodor hodor
+				<p class="text-header" id="subheader-header">
+					Header hodor ho hodor hodor hodor
 				</p>
 				<p>
 					Text text text text text text text text text text text text text text
-					text text text text text text text text text text text
+					text text text text text text
 				</p>
 				<button>Button</button>
 			</span>
@@ -78,8 +78,8 @@
 
 		<div class="call">
 			<div class="call-content">
-				<p>header</p>
-				<p>text</p>
+				<p>Call to action! It's time!</p>
+				<p>Dewit dewit dewit dewit dewit dewit dewit</p>
 			</div>
 			<button>button</button>
 		</div>
