Edit text to be slightly more meaningful

--- a/index.html
+++ b/index.html
@@ -5,27 +5,28 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="./styles.css" />
-		<title>Document</title>
+		<title>Lippiece's landing page</title>
 	</head>
 	<body>
 		<div class="header">
-			<a href="">Header logo</a>
+			<a href="">The Company Organization</a>
 			<ul style="list-style: none">
-				<li><a href="">Link 1</a></li>
-				<li><a href="">Link 2</a></li>
-				<li><a href="">Link 3</a></li>
+				<li><a href="">About</a></li>
+				<li><a href="">Current projects</a></li>
+				<li><a href="">Colleagues</a></li>
 			</ul>
 		</div>
 
 		<div class="subheader">
 			<span class="subheader-left">
+				<a href="https://www.youtube.com/watch?v=pxWXvg1gUSU">
 				<p class="text-header" id="subheader-header">
-					Header hodor ho hodor hodor hodor
+					Winston Churchill once said,
 				</p>
 				<p>
-					Text text text text text text text text text text text text text text
-					text text text text text text
+					 "I thought, and some gughdgdgjudoiki, that perhaps 20000 or 30000 men might be re-embarked."
 				</p>
+			</a>
 				<button>Button</button>
 			</span>
 			<span class="sub-image-wrapper">
@@ -35,53 +36,53 @@
 
 		<div class="info">
 			<p class="text-header" id="info-header">Header</p>
-			<span class="cards">
+			<div class="cards">
 				<span class="infocard">
 					<a href="">
-						<span class="card-image-wrapper">
-							<img alt="An image" src="https://picsum.photos/id/11/100" />
-						</span>
+						<div class="card-image-wrapper">
+							<img alt="An image" src="https://picsum.photos/id/11/200" />
+						</div>
 					</a>
-					<p>desc</p>
+					<p>Marsh!</p>
 				</span>
 				<span class="infocard">
 					<a href="">
-						<span class="card-image-wrapper">
-							<img alt="An image" src="https://picsum.photos/id/21/100" />
-						</span>
+						<div class="card-image-wrapper">
+							<img alt="An image" src="https://picsum.photos/id/21/200" />
+						</div>
 					</a>
-					<p>desc</p>
+					<p>Shoes!</p>
 				</span>
 				<span class="infocard">
 					<a href="">
-						<span class="card-image-wrapper">
-							<img alt="An image" src="https://picsum.photos/id/31/100" />
-						</span>
+						<div class="card-image-wrapper">
+							<img alt="An image" src="https://picsum.photos/id/31/200" />
+						</div>
 					</a>
-					<p>desc</p>
+					<p>Feet!</p>
 				</span>
 				<span class="infocard">
 					<a href="">
-						<span class="card-image-wrapper">
-							<img alt="An image" src="https://picsum.photos/id/41/100" />
-						</span>
+						<div class="card-image-wrapper">
+							<img alt="An image" src="https://picsum.photos/id/41/200" />
+						</div>
 					</a>
-					<p>desc</p>
+					<p>Wine!</p>
 				</span>
 			</span>
 		</div>
 
 		<div class="inspire">
-			<p class="quote">quote</p>
-			<p class="author">-author</p>
+			<p class="quote">Lorem ipsum, dolor sit amet consectetur adipisicing elit. At amet molestias quam, nisi deserunt quas.</p>
+			<p class="author">-Loreus Ipsius</p> 
 		</div>
 
 		<div class="call">
 			<div class="call-content">
-				<p>Call to action! It's time!</p>
-				<p>Dewit dewit dewit dewit dewit dewit dewit</p>
+				<p class="call-header">Call to action! It's time!</p>
+				<p>Dewit, dewit, dewit, dewit, dewit, dewit, dewit.</p>
 			</div>
-			<button>button</button>
+			<button>Press to win</button>
 		</div>
 
 		<div class="footer">
